<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">JoyPlusXunLeiLX</string>
    <string name="action_settings">Settings</string>
    <string name="hello_world">Hello world!</string>
    
    <string name="login_xunlei_title">迅雷离线</string>
    <string name="login_xunlei_vipname">白金账户</string>
    
    <string name="login_xunlei_usrname_hint">输入账户名</string>
    <string name="login_xunlei_passwd_hint">输入密码</string>
    
    <string name="login_xunlei_login">登陆</string>
    <string name="login_list_title">云播放列表</string>
    
    <string name="logout_welcom">欢迎您 !</string>
    <string name="logout_nickname">昵称:</string>
    <string name="logout_userid">账号:</string>
    <string name="logout_rank">会员等级:</string>
    <string name="logout_out_date">到期日期:</string>
    <string name="logout_logout">注销</string>
    
    <string name="return_back">返回</string>
    
    <string name=" networknotwork">你的网络好像有问题，请重试！</string>

</resources>