<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#3D3C3E"
    android:orientation="horizontal" >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:paddingBottom="@dimen/activity_bottom_margin"
        android:paddingLeft="@dimen/activity_left_margin"
        android:paddingRight="@dimen/activity_right_margin"
        android:paddingTop="@dimen/activity_top_margin" >

        <FrameLayout
            android:layout_width="@dimen/zero_value"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:background="#468EF4" >

            <RelativeLayout
                android:id="@+id/rl_login"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:visibility="invisible">

                <TextView
                    android:id="@+id/tv_lx_login_title"
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/list_top_margin"
                    android:gravity="center"
                    android:text="@string/login_xunlei_title"
                    android:textColor="#FFFBF2"
                    android:textSize="@dimen/max_text_size" />

                <TextView
                    android:id="@+id/tv_lx_login_vip_name"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_below="@id/tv_lx_login_title"
                    android:layout_marginTop="60dp"
                    android:gravity="left"
                    android:paddingLeft="@dimen/lx_padding_left"
                    android:text="@string/login_xunlei_vipname"
                    android:textColor="#FFFBF2"
                    android:textSize="@dimen/mid_text_size" />

                <LinearLayout
                    android:id="@+id/ll_lx_login_user_name"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_below="@id/tv_lx_login_vip_name"
                    android:layout_marginTop="@dimen/lx_edittext_top_margin"
                    android:paddingLeft="@dimen/lx_padding_left"
                    android:paddingRight="@dimen/lx_padding_left" >

                    <EditText
                        android:id="@+id/et_username"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:background="#FFFFFF"
                        android:focusable="false"
                        android:hint="@string/login_xunlei_usrname_hint"
                        android:textColorHint="#979797"
                        android:textSize="@dimen/min_text_size"
                        android:singleLine="true" />
                </LinearLayout>

                <LinearLayout
                    android:id="@+id/ll_lx_login_passwd_name"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_below="@id/ll_lx_login_user_name"
                    android:layout_marginTop="@dimen/lx_edittext_top_margin"
                    android:paddingLeft="@dimen/lx_padding_left"
                    android:paddingRight="@dimen/lx_padding_left" >

                    <EditText
                        android:id="@+id/et_passwd"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:background="#FFFFFF"
                        android:focusable="false"
                        android:hint="@string/login_xunlei_passwd_hint"
                        android:textColorHint="#979797"
                        android:textSize="@dimen/min_text_size" 
                        android:singleLine="true"/>
                </LinearLayout>

                <Button
                    android:id="@+id/bt_login"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_below="@id/ll_lx_login_passwd_name"
                    android:layout_marginLeft="@dimen/lx_padding_left"
                    android:layout_marginRight="@dimen/lx_padding_left"
                    android:layout_marginTop="46dp"
                    android:background="#FFFFFF"
                    android:text="@string/login_xunlei_login"
                    android:textSize="@dimen/min_text_size" />
            </RelativeLayout>

            <RelativeLayout
                android:id="@+id/rl_logout"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:visibility="visible">

                <TextView
                    android:id="@+id/tv_lx_logout_title"
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/list_top_margin"
                    android:gravity="center"
                    android:text="@string/login_xunlei_title"
                    android:textColor="#FFFBF2"
                    android:textSize="@dimen/max_text_size" />

                <TextView
                    android:id="@+id/tv_lx_logout_welcom"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_below="@id/tv_lx_logout_title"
                    android:layout_marginTop="51dp"
                    android:gravity="left"
                    android:paddingLeft="@dimen/lx_padding_left"
                    android:text="@string/logout_welcom"
                    android:textColor="#FFFBF2"
                    android:textSize="@dimen/max_low1_text_size" />
                
                <TextView
                    android:id="@+id/tv_lx_logout_nickname"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_below="@id/tv_lx_logout_welcom"
                    android:layout_marginTop="17dp"
                    android:gravity="left"
                    android:paddingLeft="@dimen/lx_padding_left"
                    android:text="@string/logout_nickname"
                    android:textColor="#FFFBF2"
                    android:textSize="@dimen/min_text_size" />
                
                <TextView
                    android:id="@+id/tv_lx_logout_nickname_content"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_below="@id/tv_lx_logout_welcom"
                    android:layout_toRightOf="@id/tv_lx_logout_nickname"
                    android:layout_marginTop="17dp"
                    android:paddingLeft="@dimen/lx_padding_left"
                    android:text="某某"
                    android:textColor="#FFFBF2"
                    android:textSize="@dimen/min_text_size" />
                <TextView
                    android:id="@+id/tv_lx_logout_userid"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_below="@id/tv_lx_logout_nickname"
                    android:layout_marginTop="13dp"
                    android:gravity="left"
                    android:paddingLeft="@dimen/lx_padding_left"
                    android:text="@string/logout_userid"
                    android:textColor="#FFFBF2"
                    android:textSize="@dimen/min_text_size" />
                
                <TextView
                    android:id="@+id/tv_lx_logout_userid_content"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_below="@id/tv_lx_logout_nickname"
                    android:layout_toRightOf="@id/tv_lx_logout_userid"
                    android:layout_marginTop="13dp"
                    android:paddingLeft="@dimen/lx_padding_left"
                    android:text="800180013"
                    android:textColor="#FFFBF2"
                    android:textSize="@dimen/min_text_size" />
                <TextView
                    android:id="@+id/tv_lx_logout_rank"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_below="@id/tv_lx_logout_userid"
                    android:layout_marginTop="13dp"
                    android:gravity="left"
                    android:paddingLeft="@dimen/lx_padding_left"
                    android:text="@string/logout_rank"
                    android:textColor="#FFFBF2"
                    android:textSize="@dimen/min_text_size" />
                
                <TextView
                    android:id="@+id/tv_lx_logout_rank_content"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_below="@id/tv_lx_logout_userid"
                    android:layout_toRightOf="@id/tv_lx_logout_rank"
                    android:layout_marginTop="13dp"
                    android:paddingLeft="@dimen/lx_padding_left"
                    android:text="VIP3"
                    android:textColor="#FFFBF2"
                    android:textSize="@dimen/min_text_size" />
                <TextView
                    android:id="@+id/tv_lx_logout_outofdate"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_below="@id/tv_lx_logout_rank_content"
                    android:layout_marginTop="13dp"
                    android:gravity="left"
                    android:paddingLeft="@dimen/lx_padding_left"
                    android:text="@string/logout_out_date"
                    android:textColor="#FFFBF2"
                    android:textSize="@dimen/min_text_size" />
                
                <TextView
                    android:id="@+id/tv_lx_logout_outofdate_content"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_below="@id/tv_lx_logout_rank_content"
                    android:layout_toRightOf="@id/tv_lx_logout_outofdate"
                    android:layout_marginTop="16dp"
                    android:paddingLeft="@dimen/lx_padding_left"
                    android:textColor="#FFFBF2"
                    android:textSize="16dp"/>

                <Button
                    android:id="@+id/bt_logout"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_below="@id/tv_lx_logout_outofdate"
                    android:layout_marginLeft="@dimen/lx_padding_left"
                    android:layout_marginRight="@dimen/lx_padding_left"
                    android:layout_marginTop="51dp"
                    android:background="#FFFFFF"
                    android:text="@string/logout_logout"
                    android:textSize="@dimen/min_text_size" />
            </RelativeLayout>
        </FrameLayout>

        <RelativeLayout
            android:layout_width="@dimen/zero_value"
            android:layout_height="match_parent"
            android:layout_marginTop="@dimen/list_top_margin"
            android:layout_weight="4.3"
            android:background="#F2F2F2" >

            <TextView
                android:id="@+id/tv_list_tittle"
                android:layout_width="match_parent"
                android:layout_height="95dp"
                android:gravity="left|center_vertical"
                android:paddingLeft="@dimen/list_padding_left"
                android:text="@string/login_list_title"
                android:textColor="#414850"
                android:textSize="@dimen/max_text_size" />
        </RelativeLayout>
    </LinearLayout>

</RelativeLayout>